# Neural-Network

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
demos/: CMakeLists.txt
demos/digit_recognition/: CMakeLists.txt
demos/digit_recognition/include/: ImageDataSet.hpp  proimage.h
demos/digit_recognition/src/: CMakeLists.txt
demos/digit_recognition/src/image_dataset/: CMakeLists.txt  image_dataset.cpp
demos/digit_recognition/src/proimage/: CMakeLists.txt  process_image.cpp
demos/digit_recognition/src/test/: CMakeLists.txt  main.cpp
demos/digit_recognition/src/train/: CMakeLists.txt  main.cpp
demos/digit_recognition/src/visual_app/: CMakeLists.txt  main.cpp
demos/digit_recognition/visualization/: output_1.data  visualization.py
demos/xor/: CMakeLists.txt  main.cpp
include/: dataset.hpp  layer.hpp  matrix.hpp  nn.hpp
include/nn/: matrix.h  nn.hpp
model/: nn_1.json
src/: CMakeLists.txt
src/dataset/: CMakeLists.txt  dataset.cpp
src/nn/: CMakeLists.txt  dataset.cpp  layer.cpp  matrix.c  matrix.cpp  nn.cpp
